--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -9,8 +9,29 @@
 </mat-toolbar>
 
 <main class="content-warapper">
+
+  <audio controls>
+    <source  type="audio/mpeg"  [src]="fileSource" >
+  </audio>
   <!-- <mat-card> -->
   <div class="demo-button-container">
+    <mat-form-field appearance="fill" style="width: 200px;">
+      <mat-label>Language</mat-label>
+      <mat-select [(value)]="selectedLanguage" (selectionChange)="loadEditions()">
+        <mat-option *ngFor="let lang of langs" [value]="lang">
+          {{languageNames.of(lang)}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="fill" style="width: 300px;">
+      <mat-label>Edition</mat-label>
+      <mat-select [(value)]="selectedEdition" (selectionChange)="getEdition()">
+        <mat-option *ngFor="let edition of editions" [value]="edition.identifier">
+          {{edition.name}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <br>
     <button mat-raised-button (click)="openPDF()" class="demo-button">
       Save PDF
     </button>
@@ -26,8 +47,8 @@
     </mat-form-field>
     <table #table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table" matSort>
       <ng-container matColumnDef="number">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>No.</th>
-        <td mat-cell *matCellDef="let element">{{element.number}}</td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20px;">No.</th>
+        <td mat-cell *matCellDef="let element" style="text-align: end; padding-right: 20px;">{{element.number}}</td>
       </ng-container>
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
@@ -42,8 +63,8 @@
         <td mat-cell *matCellDef="let element">{{element.englishNameTranslation}}</td>
       </ng-container>
       <ng-container matColumnDef="numberOfAyahs">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Number Of Ayahs</th>
-        <td mat-cell *matCellDef="let element">{{element.numberOfAyahs}}</td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 115px;">Number Of Ayahs</th>
+        <td mat-cell *matCellDef="let element" style="text-align: end; padding-right: 20px;">{{element.numberOfAyahs}}</td>
       </ng-container>
       <ng-container matColumnDef="revelationType">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Revelation Type</th>
